[package]
name = "napoca"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
grpc            = "~0.6.1"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
tls-api            = "0.1.*"
tls-api-stub       = "0.1.*"
tls-api-native-tls = "0.1.*"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
